--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.8",
     "ffmpeg-kit-react-native": "^6.0.2",
+    "i": "^0.3.7",
+    "npm": "^10.7.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-blob-util": "^0.19.6",
@@ -28,7 +31,9 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "^5.2.1",
+    "srt-parser-2": "^1.2.3",
+    "vtt-to-json": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
